[package]
authors = ["Braden Steffaniak"]
edition = "2021"
name    = "moosicbox_server"
version = "0.1.0"

[dependencies]
moosicbox_auth = { path = "../packages/auth" }
moosicbox_core = { path = "../packages/core" }
moosicbox_env_utils = { path = "../packages/env_utils" }
moosicbox_files = { path = "../packages/files" }
moosicbox_menu = { path = "../packages/menu" }
moosicbox_player = { path = "../packages/player", default-features = false }
moosicbox_qobuz = { path = "../packages/qobuz" }
moosicbox_scan = { path = "../packages/scan" }
moosicbox_search = { path = "../packages/search" }
moosicbox_tidal = { path = "../packages/tidal" }
moosicbox_tunnel = { path = "../packages/tunnel", default-features = false, features = [
    "sender",
] }
moosicbox_ws = { path = "../packages/ws" }

actix-cors    = { workspace = true }
actix-files   = { workspace = true }
actix-web     = { workspace = true }
actix-ws      = { workspace = true }
awc           = { workspace = true }
enum-as-inner = { workspace = true }
env_logger    = { workspace = true }
futures       = { workspace = true }
futures-util  = { workspace = true }
kanal         = { workspace = true }
lazy_static   = { workspace = true }
log           = { workspace = true }
once_cell     = { workspace = true }
rand          = { workspace = true }
regex         = { workspace = true }
rusqlite      = { workspace = true }
serde         = { workspace = true, features = ["derive"] }
serde_json    = { workspace = true }
thiserror     = { workspace = true }
tokio         = { workspace = true, features = ["rt", "time", "macros"] }
tokio-util    = { workspace = true }
url           = { workspace = true }

[features]
default = [
    "cpal",
    "pulseaudio",
    "static-token-auth",
    "base64",
    "aac",
    "mp3",
    "opus",
]

fail-on-warnings = []

base64 = ["moosicbox_tunnel/base64"]

# Player audio outputs
asio                = ["moosicbox_player/asio"]
cpal                = ["moosicbox_player/cpal"]
jack                = ["moosicbox_player/jack"]
pulseaudio          = ["moosicbox_player/pulseaudio"]
pulseaudio-simple   = ["moosicbox_player/pulseaudio-simple"]
pulseaudio-standard = ["moosicbox_player/pulseaudio-standard"]
resampler           = ["moosicbox_player/resampler"]

static-token-auth = []

aac  = ["moosicbox_tunnel/aac"]
mp3  = ["moosicbox_tunnel/mp3"]
opus = ["moosicbox_tunnel/opus"]
