[package]
authors     = ["Braden Steffaniak"]
default-run = "moosicbox_tunnel_server"
edition     = "2021"
name        = "moosicbox_tunnel_server"
version     = "0.1.0"

[[bin]]
name = "moosicbox_tunnel_server"
path = "src/main.rs"

[dependencies]
actix-cors        = { workspace = true }
actix-web         = { workspace = true }
actix-ws          = { workspace = true }
aws-config        = { workspace = true }
aws-sdk-ssm       = { workspace = true }
bytes             = { workspace = true }
chrono            = { workspace = true }
crossbeam-channel = { workspace = true }
env_logger        = { workspace = true }
futures-util      = { workspace = true }
hex               = { workspace = true }
lazy_static       = { workspace = true }
log               = { workspace = true }
moosicbox_tunnel  = { path = "../packages/tunnel", default-features = false }
mysql             = { workspace = true }
once_cell         = { workspace = true }
qstring           = { workspace = true }
rand              = { workspace = true }
serde             = { workspace = true, features = ["derive"] }
serde_json        = { workspace = true }
sha2              = { workspace = true }
strum             = { workspace = true }
strum_macros      = { workspace = true }
thiserror         = { workspace = true }
tokio             = { workspace = true, features = ["rt-multi-thread", "macros"] }
uuid              = { workspace = true }

[features]
fail-on-warnings = []
