[package]
name = "moosicbox_symphonia_player"
version = "0.1.0"
authors = ["Braden Steffaniak"]
edition = "2021"

[dependencies]
clap = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
symphonia = { workspace = true }
thiserror = "1.0.48"
arrayvec = { version = "0.7.1", optional = true }
cpal = { version = "0.15.2", optional = true }
rb = { version = "0.4.1", optional = true }
rubato = { version = "0.12.0", optional = true }
libpulse-binding = { version = "2.28.1", optional = true }
libpulse-simple-binding = { version = "2.28.1", optional = true }

[features]
default = []
fail-on-warnings = []
jack = ["cpal/jack"]
asio = ["cpal/asio"]
pulseaudio = ["dep:libpulse-binding", "dep:libpulse-simple-binding"]
cpal = ["dep:arrayvec", "dep:cpal", "dep:rb", "dep:rubato"]
pulseaudio-standard = ["pulseaudio"]
pulseaudio-simple = ["pulseaudio"]
