[package]
authors = ["Braden Steffaniak"]
edition = "2021"
name    = "moosicbox_symphonia_player"
version = "0.1.0"

[dependencies]
arrayvec                = { version = "0.7.1", optional = true }
bytes                   = { workspace = true }
clap                    = { workspace = true }
cpal                    = { version = "0.15.2", optional = true }
crossbeam-channel       = { workspace = true }
futures                 = { workspace = true }
lazy_static             = { workspace = true }
libpulse-binding        = { version = "2.28.1", optional = true }
libpulse-simple-binding = { version = "2.28.1", optional = true }
log                     = { workspace = true }
moosicbox_converter     = { path = "../../packages/converter" }
pretty_env_logger       = { workspace = true }
rangemap                = { workspace = true }
rb                      = { version = "0.4.1", optional = true }
reqwest                 = { workspace = true }
rubato                  = { version = "0.12.0", optional = true }
symphonia               = { workspace = true }
thiserror               = { workspace = true }
tokio                   = { workspace = true }

[features]
default = ["cpal", "pulseaudio", "resampler", "opus"]

fail-on-warnings = []

# Player audio outputs
asio                = ["cpal/asio"]
cpal                = ["resampler", "dep:cpal"]
jack                = ["cpal/jack"]
opus                = ["resampler"]
pulseaudio          = ["pulseaudio-standard", "pulseaudio-simple"]
pulseaudio-simple   = ["dep:libpulse-binding", "dep:libpulse-simple-binding"]
pulseaudio-standard = ["dep:libpulse-binding", "dep:libpulse-simple-binding"]
resampler           = ["dep:arrayvec", "dep:rb", "dep:rubato"]
