[package]
authors = ["Braden Steffaniak"]
edition = "2021"
name    = "moosicbox_symphonia_player"
version = "0.1.0"

[dependencies]
moosicbox_converter    = { path = "../../packages/converter" }
moosicbox_stream_utils = { path = "../../packages/stream_utils" }

arrayvec                = { workspace = true, optional = true }
bytes                   = { workspace = true }
clap                    = { workspace = true }
cpal                    = { workspace = true, optional = true }
crossbeam-channel       = { workspace = true }
fdk-aac                 = { workspace = true }
futures                 = { workspace = true }
lazy_static             = { workspace = true }
libpulse-binding        = { workspace = true, optional = true }
libpulse-simple-binding = { workspace = true, optional = true }
log                     = { workspace = true }
mp3lame-encoder         = { workspace = true }
opus                    = { workspace = true }
pretty_env_logger       = { workspace = true }
rangemap                = { workspace = true }
rb                      = { workspace = true, optional = true }
reqwest                 = { workspace = true }
rubato                  = { workspace = true, optional = true }
symphonia               = { workspace = true }
thiserror               = { workspace = true }
tokio                   = { workspace = true }
tokio-stream            = { workspace = true }
tokio-util              = { workspace = true }

[features]
default = ["cpal", "pulseaudio", "resampler", "aac", "mp3", "opus"]

fail-on-warnings = []

# Player audio outputs
asio                = ["cpal/asio"]
cpal                = ["resampler", "dep:cpal"]
jack                = ["cpal/jack"]
pulseaudio          = ["pulseaudio-standard", "pulseaudio-simple"]
pulseaudio-simple   = ["dep:libpulse-binding", "dep:libpulse-simple-binding"]
pulseaudio-standard = ["dep:libpulse-binding", "dep:libpulse-simple-binding"]
resampler           = ["dep:arrayvec", "dep:rb", "dep:rubato"]

aac  = ["resampler"]
mp3  = ["resampler"]
opus = ["resampler"]
